--- a/META.yml
+++ b/META.yml
@@ -1,36 +1,43 @@
 ---
-abstract: "adds \"augment method => sub {...}\" support to Class::Method::Modifiers"
+abstract: 'adds "augment method => sub {...}" support to Class::Method::Modifiers'
 author:
-  - 'Toby Inkster <tobyink@cpan.org>'
+  - 'Toby Inkster (TOBYINK) <tobyink@cpan.org>'
 build_requires:
-  ExtUtils::MakeMaker: 6.59
-  Test::More: 0.61
+  Test::More: '0.61'
 configure_requires:
-  ExtUtils::MakeMaker: 6.59
-distribution_type: module
-dynamic_config: 1
-generated_by: 'Module::Install version 1.06'
+  ExtUtils::MakeMaker: '6.17'
+dynamic_config: 0
+generated_by: 'Moose::Meta::Class::__ANON__::SERIAL::6 version , CPAN::Meta::Converter version 2.140640'
 keywords: []
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
-module_name: Class::Method::ModifiersX::Augment
+  version: '1.4'
 name: Class-Method-ModifiersX-Augment
 no_index:
   directory:
+    - eg
+    - examples
     - inc
     - t
     - xt
+optional_features: {}
+provides:
+  Class::Method::ModifiersX::Augment:
+    file: lib/Class/Method/ModifiersX/Augment.pm
+    version: '0.002'
+  MooX::Augment:
+    file: lib/MooX/Augment.pm
+    version: '0.002'
 recommends:
-  MRO::Compat: 0
-  Moo: 0
+  MRO::Compat: '0'
+  Moo: '0'
 requires:
-  Class::Method::Modifiers: 0
-  perl: 5.8.0
+  Class::Method::Modifiers: '0'
 resources:
+  X_identifier: http://purl.org/NET/cpan-uri/dist/Class-Method-ModifiersX-Augment/project
   bugtracker: http://rt.cpan.org/Dist/Display.html?Queue=Class-Method-ModifiersX-Augment
   homepage: https://metacpan.org/release/Class-Method-ModifiersX-Augment
   license: http://dev.perl.org/licenses/
-  repository: https://bitbucket.org/tobyink/p5-class-method-modifiersx-augment
-version: 0.001
+  repository: git://github.com/tobyink/p5-class-method-modifiersx-augment.git
+version: '0.002'
